# ml_deploy

./: .gitignore  Dockerfile  README.md  deployment.yaml  model.ipynb  model_1.ipynb  model_2.ipynb  noxfile.py  pyproject.toml  requirements.txt
model_1/: saved_model.pb
model_1/variables/: variables.index
model_2/: saved_model.pb
model_2/variables/: variables.data-00000-of-00001  variables.index
mymodel/: saved_model.pb
mymodel/variables/: variables.index
poetrytest/: app.py  inferrer.py  request_data.py
tests/: conftest.py  test_app.py  test_inferrer.py
tests/test_data/: test_image_0.npz  test_image_1000.npz  test_img_0.npz  test_img_10.npz  test_img_1000.npz  test_img_150.npz
