[tool.poetry]
name = "poetrytest"
version = "1.4.0"
description = ""
authors = ["Bozena <bozena.kirkov@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pytest = "^7.2.1"
nox = "^2022.11.21"
flasgger = "^0.9.5"
flask = "^2.2.2"
tensorflow = "^2.11.0"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
